# bevy_cube_sphere

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README.md
assets/shaders/: normal_debug.wgsl  tangent_debug.wgsl
examples/: normal.rs  tangent.rs  texture.rs  uv_generation.rs  wireframe.rs
src/: lib.rs  main.rs
